# insilico_lecture04

./: .gitignore  117.sdf  A27.sdf  lecture_04.ipynb  pyproject.toml  requirements.txt
