[project]
name = "lecture-04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chembl-downloader>=0.5.1",
    "gemmi>=0.7.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "mols2grid>=2.0.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "py3dmol>=2.4.2",
    "rdkit>=2025.3.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "selfies>=2.2.0",
    "tqdm>=4.67.1",
]
